feat: name change to kuma-tv-core

--- a/apps/neko-terebi-app/package.json
+++ b/apps/neko-terebi-app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@hrgui/neko-terebi-app",
+  "name": "@hrgui/kuma-tv-core-app",
   "version": "0.0.0",
   "type": "module",
   "main": "./main.tsx",
   "dependencies": {
-    "@hrgui/neko-terebi-error-page": "*"
+    "@hrgui/kuma-tv-core-error-page": "*"
   }
 }
