--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hrgui/neko-terebi",
+  "name": "@hrgui/kuma-tv-core",
   "private": true,
   "version": "0.0.0",
   "type": "module",
