--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tanstack/react-virtual": "^3.13.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-legacy": "^6.0.2",
