--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -31,10 +31,10 @@ jobs:
         run: bun install
 
       - name: ⚙️ Build
-        run: bun run build && bun run build-storybook
+        run: bun run build
 
-      - name: ⚙️ Prepare
-        run: mkdir -p ./dist/storybook && mv ./storybook-static/* ./dist/storybook
+      # - name: ⚙️ Prepare
+      #   run: mkdir -p ./dist/storybook && mv ./storybook-static/* ./dist/storybook
 
       - name: ⚙️ Setup Pages
         if: success()
