--- a/package.json
+++ b/package.json
@@ -29,16 +29,12 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.5",
+    "@chromatic-com/storybook": "^4.1.0",
     "@eslint/js": "^9.21.0",
-    "@storybook/addon-essentials": "^8.6.2",
-    "@storybook/addon-interactions": "^8.6.2",
-    "@storybook/addon-links": "^8.6.2",
-    "@storybook/addon-onboarding": "^8.6.2",
-    "@storybook/blocks": "^8.6.2",
-    "@storybook/react": "^8.6.2",
-    "@storybook/react-vite": "^8.6.2",
-    "@storybook/test": "^8.6.2",
+    "@storybook/addon-docs": "^9.1.0",
+    "@storybook/addon-links": "^9.1.0",
+    "@storybook/addon-onboarding": "^9.1.0",
+    "@storybook/react-vite": "^9.1.0",
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-router": "^1.112.0",
     "@tanstack/react-virtual": "^3.13.2",
@@ -47,28 +43,28 @@
     "@types/lodash": "^4.17.16",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-legacy": "^6.0.2",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-legacy": "^7.1.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "abortcontroller-polyfill": "^1.7.8",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-storybook": "^0.11.3",
+    "eslint-plugin-storybook": "^9.1.0",
     "event-target-polyfill": "^0.0.4",
     "events": "^3.3.0",
     "globals": "^15.15.0",
     "jsdom": "^25.0.1",
     "postcss": "^8.5.3",
     "scroll-polyfill": "^1.0.1",
-    "storybook": "^8.6.2",
+    "storybook": "^9.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "terser": "^5.39.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.25.0",
-    "vite": "^6.2.0",
-    "vitest": "^3.0.7"
+    "vite": "^7.0.6",
+    "vitest": "^3.2.4"
   },
   "eslintConfig": {
     "extends": [
