--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/lodash": "^4.17.16",
+    "@types/node": "^24.1.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-legacy": "^7.1.0",
